fix: align home audience title

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2623,9 +2623,13 @@ body.home .site-footer .map-pulse {
 
     .audience-left .section-title {
         width: 455px;
+        margin: 0;
         font-size: 44px;
         line-height: 1.1;
-        letter-spacing: -0.03em;
+        font-weight: 600;
+        letter-spacing: -1.32px;
+        color: #EFEFEF;
+        font-style: normal;
     }
 
     .audience-left .section-title em {
@@ -3446,12 +3450,6 @@ body.home .site-footer .map-pulse {
         width: 445px;
         font-size: 36px;
         line-height: 110%;
-    }
-
-    body.home .home-audience .audience-left .section-title {
-        width: 455px;
-        font-size: 44px;
-        line-height: 1.1;
     }
 
     body.home .home-directions .container,
